Update the pink color in the SCSS

--- a/src/assets/_scss/abstracts/_variables.scss
+++ b/src/assets/_scss/abstracts/_variables.scss
@@ -7,6 +7,14 @@ $mobile-screen: 480px;
 $roboto: 'Roboto', sans-serif;
 $robotoslab: 'Roboto Slab', serif;
 
+// Primary Colors
+$white: #ffffff;
+$black: #222222;
+$pink: hotpink;
+
+// Accent Colors
+$blue: lightskyblue;
+$green: lightseagreen;
 
 // Font Size
 $typo_lion: 2.6rem;
